# tfm_secure_peripheral

./: CMakeLists.txt  README.rst  app.overlay  prj.conf  sample.yaml
led_partition/: CMakeLists.txt  led_partition.c  tfm_led_partition.yaml.in  tfm_manifest_list.yaml.in
src/: led_partition.c  led_partition.h  main.c
